# parallel-programming-udacity

./: .gitignore  README.md  cubingNumbers.cu  cuda_installation_summary.txt  increment_naive_and_atomic.cu  squaringNumbers.cu  usefull.txt
BasicCudaProgram/: memorySpaces.cu  printBlockId.cu  shiftLeft.cu
CmakeTests/: CMakeLists.txt
OpenCVDemo/demo1/: CMakeLists.txt  demo.cpp
OpenCVDemo/demo2/: CMakeLists.txt  main.cpp
Problem Set 1/: CMakeLists.txt  Makefile  student_func.cu
Problem Set 2/: HW2.cpp
ProblemSet_2/: CMakeLists.txt  HW2.cpp  student_func.cu
